# taskmesh

./: .gitignore  README.MD  example.py  pyproject.toml  requirements.txt  update_dependencies.py
.github/workflows/: ci-cd.yml
examples/: aws.py  gcp.py
taskmesh/: __init__.py  config.py
taskmesh/providers/: gcp.py
taskmesh/providers/aws/: __init__.py
taskmesh/providers/gcp/: __init__.py  provider.py
